RESOLVED FIXED258585
CSS <position> should never serialize to a single value
https://bugs.webkit.org/show_bug.cgi?id=258585
Summary CSS <position> should never serialize to a single value
Tim Nguyen (:ntim)
Reported 2023-06-27 12:42:08 PDT
According to https://github.com/w3c/csswg-drafts/issues/8996 It's ambiguous in some cases, especially when followed by length.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-07-04 12:43:13 PDT
Tim Nguyen (:ntim)
Comment 2 2023-09-21 14:44:38 PDT
Tim Nguyen (:ntim)
Comment 3 2023-09-21 17:43:11 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/42112
EWS
Comment 4 2023-09-21 18:26:11 PDT
Committed 268291@main (860ac0eb3e14): <https://commits.webkit.org/268291@main> Reviewed commits have been landed. Closing PR #18043 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.