CSS <position> should never serialize to a single value https://bugs.webkit.org/show_bug.cgi?id=258585 rdar://111750372

Reviewed by Oriol Brufau and Simon Fraser.

This was clarified in https://github.com/w3c/csswg-drafts/issues/8996

It's ambiguous in some cases, especially when followed by length.

* LayoutTests/fast/backgrounds/background-shorthand-with-backgroundSize-style-expected.txt:
* LayoutTests/fast/backgrounds/background-shorthand-with-backgroundSize-style.html:
* LayoutTests/fast/css/background-position-serialize-expected.txt:
* LayoutTests/fast/css/background-position-serialize.html:
* LayoutTests/fast/masking/parsing-webkit-mask-expected.txt:
* LayoutTests/fast/masking/parsing-webkit-mask.html:
* LayoutTests/fast/masking/parsing-mask-expected.txt:
* LayoutTests/fast/masking/parsing-mask.html:
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/serialize-values.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-masking/parsing/mask-position-valid.html:
* LayoutTests/imported/w3c/web-platform-tests/css/motion/parsing/offset-anchor-parsing-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/motion/parsing/offset-parsing-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/motion/parsing/offset-position-parsing-valid-expected.txt:
* Source/WebCore/css/ShorthandSerializer.cpp:
(WebCore::ShorthandSerializer::serializeLayered const):
* Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumePosition):

Canonical link: https://commits.webkit.org/268291@main